--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "app",
   "private": "true",
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   },
   "dependencies": {
-    "@picocss/pico": "^1.5.11"
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@picocss/pico": "^1.5.11",
+    "chart.js": "^4.4.1",
+    "chartkick": "^5.0.1",
+    "esbuild": "^0.20.0",
+    "highcharts": "^11.3.0"
   }
 }
