--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@
 !/app/assets/builds/.keep
 
 /node_modules
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
