production dockerfile, env vars for various external connections

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,12 +4,9 @@ FROM ruby:3.2.3
 
 # Install packages needed to build gems
 RUN apt-get update -qq && \
-    apt-get install -y build-essential libvips postgresql-client libpq-dev
+    curl -sL https://deb.nodesource.com/setup_21.x | bash && \
+    apt-get install -y --no-install-recommends build-essential postgresql-client libpq-dev nodejs
 
-RUN curl -sL https://deb.nodesource.com/setup_21.x -o /tmp/nodesource_setup.sh
-RUN bash /tmp/nodesource_setup.sh
-
-RUN apt-get install nodejs
 RUN corepack enable
 
 WORKDIR /stonks
@@ -26,9 +23,7 @@ RUN yarn install
 # Install app
 COPY . .
 
-COPY entrypoint.sh /usr/bin/
-RUN chmod +x /usr/bin/entrypoint.sh
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["./entrypoint.sh"]
 EXPOSE 3000
 
 CMD ["foreman", "start", "-f", "Procfile.dev"]
