--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,6 @@
 default: &default
-  host: db
+  host: <%= ENV.fetch("DATABASE_HOST") { "db" } %>
+  port: <%= ENV.fetch("DATABASE_PORT") { 5432 } %>
   adapter: postgresql
   username: <%= Rails.application.credentials.db_username %>
   password: <%= Rails.application.credentials.db_password %>
